# Bentobot

./: .gitignore  Bentobot.cpp  OpenCVTestImage.xcf  README.md  Steppers  stepper_demo.ino
ArduinoCode/: stepper_demo.ino
ArduinoCode/Moving_Arduino/: Moving_Arduino.ino
ArduinoCode/Smoothduino/: Smoothduino.ino
ArduinoCode/Static_Arduino/: Static_Arduino.ino
CameraCalibrate/: CMakeLists.txt  Calibrate.cpp  CameraPair.cpp  CameraPair.h  calibration.cpp  calibration_raspicam.cpp  camerapair.yml  cpp-example-stereo_calib  cpp-example-stereo_match  logitech.yml  pnp.yml  raspicam_internal.yml  threshold.h  threshold_0.yml  threshold_1.yml  triangulate.cpp
CircleDetect/: CMakeCache.txt  CMakeLists.txt  CircleDetect  CircleDetect.cpp  Makefile  cmake_install.cmake
DisplayImage/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
Final/: CMakeLists.txt  CameraPair.cpp  CameraPair.h  Triangulate_withSC  Triangulate_withSC.cpp  camerapair.yml  logitech.yml  pnp.yml  raspicam_internal.yml  threshold.h  threshold_0.yml  threshold_1.yml
ModifyTest/: CMakeCache.txt  CMakeLists.txt  Makefile  ModifyImage  ModifyTest.cpp  cmake_install.cmake
Reduction/: CMakeCache.txt  CMakeLists.txt  Makefile  Reduce  cmake_install.cmake
SC/: CMakeLists.txt  SC.cpp
VideoDetect/: CMakeCache.txt  CMakeLists.txt  Makefile  VideoDetect  VideoDetect.cpp  cmake_install.cmake
