cmake_minimum_required(VERSION 2.8)
project( Calibrate )
find_package( OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Calibrate Calibrate.cpp)
add_executable( Calibrate_sample calibration.cpp )
target_link_libraries( Calibrate ${OpenCV_LIBS})
target_link_libraries( Calibrate_sample ${OpenCV_LIBS} )

set(raspicam_DIR /usr/local/lib/cmake)
find_package(raspicam)
IF (raspicam_CV_FOUND)
    MESSAGE(STATUS "COMPILING TRIANGULATION WITH RASPICAM")
    add_executable( triangulate triangulate.cpp CameraPair.cpp)
    target_link_libraries(triangulate ${raspicam_CV_LIBS})
    target_link_libraries( triangulate ${OpenCV_LIBS} )

    MESSAGE(STATUS "COMPILING CALIBRATION WITH RASPICAM")
    add_executable( Calibration_raspicam calibration_raspicam.cpp )
    target_link_libraries(Calibration_raspicam ${raspicam_CV_LIBS})
    target_link_libraries(Calibration_raspicam ${OpenCV_LIBS} )
ELSE()
    MESSAGE(WARNING "RASPICAM NOT FOUND IN YOUR SYSTEM. CANNOT COMPILE TRIANGULATION")
ENDIF()


