cmake_minimum_required(VERSION 2.8)
project( VideoDetect )
find_package( OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( VideoDetect VideoDetect.cpp)
target_link_libraries( VideoDetect ${OpenCV_LIBS})

set(raspicam_DIR /usr/local/lib/cmake)
find_package(raspicam)
IF (raspicam_CV_FOUND)
    MESSAGE(STATUS "COMPILING TRIANGULATION WITH RASPICAM")
    target_link_libraries(VideoDetect ${raspicam_CV_LIBS})
    target_link_libraries( VideoDetect ${OpenCV_LIBS} )
ELSE()
    MESSAGE(WARNING "RASPICAM NOT FOUND IN YOUR SYSTEM. CANNOT COMPILE TRIANGULATION")
ENDIF()

